Feat: database connection

--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
+  "name": "projeto16-boardcamp",
+  "type": "module",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon ./src/app.js"
+  },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "joi": "^17.9.2"
+    "joi": "^17.9.2",
+    "pg": "^8.11.1",
+    "postgres": "^3.3.5"
   }
 }
