--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "projeto16-boardcamp",
   "type": "module",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon ./src/app.js"
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
