--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.1",
     "postgres": "^3.3.5"
   }
