--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": " npx nodemon src/app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
